2020-01-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in handling surviving a when assigning single bytes from (hl) to stack.
	* support/regression/tests/bug-3166.c:
	  Test for bug #3166.

2021-01-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCCdwarf2.c,
	  src/cdbFile.c: partial fix for bug #3153
	* suppport/regression/tests/bug-3081.c: avoid redefinition warning

2021-01-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/cmd.src/cmdlex.l: reverted previous change
	* sim/ucism/cmd.src/cmdutil.h: ensure SOCKET_AVAIL defined before use

2021-01-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/cmd.src/cmdlex.l: change #include order so SOCKET defined

2020-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixes in handling register operands.
	* src/z80/ralloc2.cc:
	  More flexibility for register operands in cast and ^.

2020-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in handling of surviving registers in unsigned upcast.

2020-12-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic14/aclocal.m4:
	  Update to automake 1.16.2 to fix bug #3140.
	* device/lib/pic14/libc/Makefile.am:
	  Port itoa, ltoa rename to pic14 to fix bug #3110.
	* src/clean.mk:
	  Include pdk ports in make clean to fix bug #3152.
	* support/regression/ports/stm8/spec.mk,
	  support/regression/ports/stm8-large/spec.mk:
	  Increase stm8 test timeout by 50%, to accomodate slow macOS PPC (bug #3149).

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  .version,
	  support/regression/test/digit_separators.c:
	  C23 digit separators.

2020-12-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCval.c,
	  .version: