@@ -1573,7 +1573,7 @@ genSub (const iCode *ic, asmop *result_aop, asmop *left_aop, asmop *right_aop)
             }
           started = true;
         }
-      else if (right_aop->type == AOP_STK || right_aop->type == AOP_STL && !i || right_aop->type == AOP_CODE)
+      else if (right_aop->type == AOP_STK || right_aop->type == AOP_STL && !i || right_aop->type == AOP_CODE || right_aop->type == AOP_SFR)
         {
           if (i + 1 < size && aopInReg (left_aop, i + 1, P_IDX))
             pushPF (!aopInReg (left_aop, i, A_IDX));
